# zkiot-rust

./: .gitignore  Cargo.toml  README.md  class.json  class_table.json  diagram.json  program.s  program_new.s  sample.txt
Merkle/: Cargo.toml
Merkle/merkle_lib/: Cargo.toml
Merkle/src/: main.rs
Merkle/tests/: merkle_test.rs
commitment_generation/: Cargo.toml  store_registers.asm
commitment_generation/src/: generate_program.rs  main.rs
data/: device_config.json  program_commitment.json  program_params.json  proof.json  setup1.json  setup10.json  setup11.json  setup12.json  setup13.json  setup14.json  setup15.json  setup16.json  setup17.json  setup18.json  setup2.json  setup3.json  setup4.json  setup5.json  setup6.json  setup7.json  setup8.json  setup9.json  setuptest.json  setuptest_wiki_1.json
merkle_lib/src/: lib.rs
merkle_lib/tests/: merkle_test.rs
proof_generation/: Cargo.toml  rust-toolchain.toml  z_vec.txt
proof_verification/: Cargo.toml
setup/: Cargo.toml
setup/src/: main.rs
src/: field.rs  json_file.rs  kzg.rs  lib.rs  math.rs  matrices.rs  parser.rs  polynomial.rs  utils.rs
unrelated/: export-esp.sh  generate_random_opcode.py  install-rust-toolchain.sh  run_all.sh  run_proof_riscv.sh  setup_zkp.py  wokwi-project.txt  z_vec.py  z_vec.rs
zk_iot/: .gitignore  Cargo.toml  class_table.json  commit.json  data.json  generate_random_opcode.py  line_num.txt  opcodes.txt  prime_generator_finder.py  proof.json  report.txt  run_all.sh  sample.txt  sample_2.txt  setup.txt  setup_zkp.py  t.txt  test.txt
zk_iot/commitment/: Cargo.toml  sample.txt
zk_iot/commitment/src/: main.rs
zk_iot/commitment_generation/: Cargo.toml
zk_iot/commitment_generation/src/: main.rs
zk_iot/proof_generation/: Cargo.toml
zk_iot/proof_generation/src/: main.rs
zk_iot/proof_verification/: Cargo.toml
zk_iot/proof_verification/src/: main.rs
zk_iot/setup/: Cargo.toml
zk_iot/setup/src/: main.rs
zk_iot/src/: commitment.rs  commitmnet.rs  file.rs  json_file.rs  lib.rs  main.rs  math.rs  matrices.rs  parser.rs  setup.rs  utils.rs
zk_iot/src/ahp/: commitment.rs  commitment_generation.rs  commitmnet.rs  mod.rs  proof_generation.rs  proof_verification.rs  setup.rs  verification.rs
zk_iot/zkp_data/: commit.json  matrices.json  proof.json  setup.json
zkp_data/: device_config.json  program_params.json  proof.json
(+10 files in other folders)
