[build]
# Uncomment the relevant target for your chip here (ESP32, ESP32-S2, ESP32-S3 or ESP32-C3)
target = "riscv32imc-esp-espidf"

[package]
name = "rust-project-esp32c3"
version = "0.1.0"
authors = ["Sergio Gasquez <sergio.gasquez@gmail.com>"]
edition = "2021"
resolver = "2"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
pio = ["esp-idf-sys/pio"]

[dependencies]
esp-idf-sys = { version = "0.33.0", features = ["binstart"] }
esp-idf-hal = "0.42.5"
esp-idf-svc = "0.47.3"

[build-dependencies]
embuild = "0.31.1"

[target.riscv32imc-esp-espidf]
linker = "ldproxy"
# Comment the line below for ESP IDF 4. Don't forget to also uncomment the `ESP_IDF_VERSION = "v4.4.6"` parameter in the `[env]` section below
rustflags = ["--cfg", "espidf_time64"]



