[package]
name = "zk_iot"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["setup", "commitment", "proof_generation", "proof_verification"]

[dependencies]
anyhow = "1.0.86"
ark-ff = "0.4.2"
nalgebra = "0.32.6"
rand = "0.8.5"
rayon = "1.10.0"
rustfft = "6.2.0"
rustnomial = "0.3.2"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0.128"
sha2 = "0.10.8"
